Fix scrollbar displaying when not needed

--- a/themes/ae_admin/modules_css/media.css
+++ b/themes/ae_admin/modules_css/media.css
@@ -207,6 +207,9 @@
 body.page-media-browser {
   background: none;
 }
+body.page-media-browser .block-page-content {
+  margin: 0;
+}
 
 div#media-browser-tabs {
   -moz-border-radius: 0;
